Mega overhaul and modernization